# wordcount

./: .gitignore  Cargo.toml  convert.py  devenv.nix  devenv.yaml  main.py
results/: visit.txt
src/: main.rs
