[package]
name = "word_count_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["rayon"] }
jieba-rs = "0.6.8"
rayon = "1.8.0"
serde_json = "1.0.108"
rusqlite = { version = "0.30.0", features = ["bundled"] }
crossbeam-channel = "0.5.10"
